commit style desktop

--- a/assets/style/import/variables.scss
+++ b/assets/style/import/variables.scss
@@ -13,5 +13,5 @@ $strongCyan: hsl(172, 67%, 45%);
 $font: "Space Mono", monospace;
 $fontSizeInput: 24px;
 
-$width: 6.5vw;
-$height: 6vh;
+$width: 6rem;
+$height: 3.5rem;
